Fix: Disabled will-change due a blurry effect

--- a/themes/material-design/reading.css
+++ b/themes/material-design/reading.css
@@ -66,7 +66,7 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	will-change: transform;
+	will-change: auto; /*transform*/
 	overflow: hidden;
 }
 
@@ -75,7 +75,7 @@
 	float: left;
 	display: flex;
 	position: relative;
-	will-change: auto !important;
+	will-change: auto; /*transform*/
 }
 
 .reading-body .r-img
@@ -160,12 +160,12 @@
 	animation-duration: 0.2s;
 	animation-fill-mode: forwards;
 	cursor: none;
-	will-change: transform;
+	will-change: auto; /*transform*/
 }
 
 .reading-lens.a > div
 {
-	will-change: transform;
+	will-change: auto; /*transform*/
 }
 
 .reading-lens.d
